examples/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: argocd-canary.havelsan.com.tr
    http:
      paths:
      - path: /
        backend:
          serviceName: canary-demo
          servicePort: 443
  tls:
  - hosts:
      - argocd-canary.havelsan.com.tr
    secretName: argocd-server-tls
